--- a/WebTour/src/main/resources/templates/User/change-password.html
+++ b/WebTour/src/main/resources/templates/User/change-password.html
@@ -98,7 +98,7 @@ a:hover{
 				</strong>
 			</p>
 			<p>
-				<a href="/account/profile">Thông tin tài khoản</a>
+				<a id="account" href="/account">Thông tin tài khoản</a>
 			</p>
 			<p>
 				<a href="/account/tour-booking">Đơn hàng của bạn</a>
@@ -134,5 +134,13 @@ a:hover{
 			</div>
 		</div>
 	</div>
+	<script>
+		let userId = sessionStorage.getItem("userId");
+	    
+	    if (userId) {
+	    	var account = document.getElementById("account");
+	    	account.href="/account?userId="+userId;
+	    }
+	</script>
 </body>
 </html>
