--- a/WebTour/src/main/resources/templates/User/profile.html
+++ b/WebTour/src/main/resources/templates/User/profile.html
@@ -33,9 +33,7 @@
         .right p {
             margin: 5px 0;
         }
-        .right p span {
-            font-weight: bold;
-        }
+        
         a:hover{
             color: #007bff;
         }
@@ -45,19 +43,24 @@
     <div class="container">
         <div class="left">
             <h2>TRANG TÀI KHOẢN</h2>
-            <p><strong>Xin chào, <span>Đỗ Nam</span>!</strong></p>
-            <p><a href="\account\profile">Thông tin tài khoản</a></p>
+            <p><strong>Xin chào, <span th:text="${user.fullName}" >Đỗ Nam</span>!</strong></p>
+            <p><a href="\account">Thông tin tài khoản</a></p>
             <p><a href="\account\tour-booking">Đơn hàng của bạn</a></p>
             <p><a href="\account\change-password">Đổi mật khẩu</a></p>
             <p><a href="\account\address">Sổ địa chỉ</a></p>
         </div>
         <div class="right">
             <h2>THÔNG TIN TÀI KHOẢN</h2>
-            <p><span>Họ tên:</span> Đỗ Nam</p>
-            <p><span>Email:</span> nam@gmail.com</p>
-            <p><span>Điện thoại:</span> 0123456789</p>
-            <p><span>Công ty:</span> ádsa</p>
-            <p><span>Địa chỉ:</span> ưadasd, Huyện Tuy Đức, Đắk Nông, Vietnam</p>
+            <p><strong>Họ tên:</strong> <span th:text="${user.fullName}"></span></p>
+		    <p><strong>Giới tính:</strong> <span th:text="${user.gender}"></span></p>
+		    <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>
+		    <p><strong>Điện thoại:</strong> <span th:text="${user.phone}"></span></p>
+		    <p><strong>Địa chỉ:</strong> 
+		        <span th:text="${address.detail}"></span>, 
+		        <span th:text="${ward.name}"></span>, 
+		        <span th:text="${district.name}"></span>, 
+		        <span th:text="${province.name}"></span>
+		    </p>
         </div>
     </div>
 </body>
