--- a/WebTour/src/main/resources/templates/User/search.html
+++ b/WebTour/src/main/resources/templates/User/search.html
@@ -136,7 +136,7 @@
     <div class="container">
         
             <div  class="card" th:each="tour : ${searchResults}" onclick="linktoDetailTour(this)" th:attr="data-id=${tour.tourId}">
-                <img src="/image/vinhhalong.jpg">
+                <img src="/imagess/vinhhalong.jpg">
                 <div class="card-content" >
                     <p>
                         <i class="fas fa-map-marker-alt icon"></i>
