Migrate data to new PC

--- a/WebTour/src/main/resources/templates/Admin/index-2.html
+++ b/WebTour/src/main/resources/templates/Admin/index-2.html
@@ -1,10 +1,10 @@
 <!-- meta tags and other links -->
 <!DOCTYPE html>
-<html lang="en" data-theme="light" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Wowdash - Bootstrap 5 Admin Dashboard HTML Template</title>
   <link rel="icon" type="image/png" href="../image/favicon.png" sizes="16x16">
   <!-- remix icon font css  -->
   <link rel="stylesheet" href="../css/remixicon.css">
@@ -32,11 +32,22 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
   <body>
-<div id="header-main-content"></div>
-  <div class="dashboard-main-body .stats">
+
+
+  <div class="dashboard-main-body">
 
     <div class="d-flex flex-wrap align-items-center justify-content-between gap-3 mb-24">
   <h6 class="fw-semibold mb-0">Dashboard</h6>
+  <ul class="d-flex align-items-center gap-2">
+    <li class="fw-medium">
+      <a href="index.html" class="d-flex align-items-center gap-1 hover-text-primary">
+        <iconify-icon icon="solar:home-smile-angle-outline" class="icon text-lg"></iconify-icon>
+        Dashboard
+      </a>
+    </li>
+    <li>-</li>
+    <li class="fw-medium">CRM</li>
+  </ul>
 </div>
     
     <div class="row gy-4">
@@ -955,7 +966,7 @@
       <!-- Latest Performance End -->
     </div>
   </div>
-    <script src="../js/headerAdmin.js"></script>
+  jQuery library js
   <script src="../js/lib/jquery-3.7.1.min.js"></script>
   <!-- Bootstrap js -->
   <script src="../js/lib/bootstrap.bundle.min.js"></script>
