--- a/WebTour/src/main/resources/static/css/loginStyle.css
+++ b/WebTour/src/main/resources/static/css/loginStyle.css
@@ -5,7 +5,8 @@
 }
 
 body {
-	background: #f6f5f7;
+	background: url('../imagess/bg.jpg');
+	background-size: cover;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -46,7 +47,7 @@ a {
 button {
 	border-radius: 20px;
 	border: 1px solid;
-	background: linear-gradient(45deg, #50e0eb, #57b5eb);
+	background: linear-gradient(45deg, #4ad4ead1, #eb57e691);
 	color: #ffffff;
 	font-size: 12px;
 	font-weight: bold;
@@ -87,11 +88,32 @@ input {
 	margin: 8px 0;
 	width: 100%;
 }
+.password-wrapper {
+    position: relative;
+    width: 100%;
+}
 
+.password-wrapper input {
+    width: 100%;
+    padding-right: 40px; /* Chừa khoảng trống cho icon */
+}
+
+.password-wrapper i {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #333;
+}
+
+.password-wrapper i:hover {
+    color: #57b5eb;
+}
 .container {
-	background-color: #fff;
+	background-color: #ffffffe0;
 	border-radius: 10px;
-	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	box-shadow: 0 14px 28px rgb(0 0 0), 0 10px 10px rgb(0 0 0 / 54%);
 	position: relative;
 	overflow: hidden;
 	width: 768px;
@@ -160,7 +182,7 @@ input {
 }
 
 .overlay {
-	background: linear-gradient(45deg, #50e0eb, #57b5eb);
+	background: linear-gradient(45deg,#4ad4ead1, #eb57e691);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
