--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -62,8 +62,7 @@
 				</select>
 			</div>
 
-			<!-- <div class="section-title">Vận chuyển</div>
-			<div class="shipping-info">Vui lòng nhập thông tin giao hàng</div> -->
+			
 			<div class="section-title">Thanh toán</div>
 			<div class="payment-methods">
 				<label> 
@@ -121,6 +120,12 @@
 				<div class="total">
 					<span>Tổng cộng</span> 
 					<span id="total-price" class="total-amount">0₫</span>
+					
+				</div>
+				<div class="total-conversion">
+					<div>Quy đổi</div>
+					<div id="conversion-value" class="amount">0₫</div>
+					
 				</div>
 				
 				<div class="actions">
