--- a/WebTour/src/main/resources/static/css/payment.css
+++ b/WebTour/src/main/resources/static/css/payment.css
@@ -130,6 +130,13 @@ h1 {
 	justify-content: space-between;
 }
 
+.total-conversion{
+	color: #007bff;
+	margin-top: 2%;
+	display: flex;
+	justify-content: space-between;
+}
+
 .order-summary .apply-coupon {
 	display: flex;
 	justify-content: space-between;
