--- a/WebTour/src/main/resources/templates/User/notificationSuccess.html
+++ b/WebTour/src/main/resources/templates/User/notificationSuccess.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Thông báo thanh toán</title>
 <link rel="stylesheet" href="../css/NotificationSuccess.css">
 <link rel="stylesheet" href="/css/notificationSuccess.js">
 <link rel="stylesheet"
