--- a/WebTour/src/main/resources/static/css/order.css
+++ b/WebTour/src/main/resources/static/css/order.css
@@ -214,4 +214,69 @@ th {
     border-radius: 6px;
     padding: 4px;
 }
+#add-input,
+#btn-input-ok {
+	border: 1px solid #dbdbdb;
+    border-radius: 6px;
+    padding: 4px;
+    margin-left: 6%;
+    
+}
+.div-search-departture{
+	display: flex;
+	margin-top: 2%;
+}
+/* dùng để đổi màu khi payment_status là paid (đã thanh toán) */
+.paid-status {
+    background-color: green; 
+    color: white; 
+    cursor: not-allowed;
+}
+/*css cho nút hủy đơn */
+.btn-cancel {
+	background-color: #ff4d4f;
+	color: white;
+	border: none;
+	padding: 5px 10px;
+	border-radius: 4px;
+	cursor: pointer;
+	margin-left: 5px;
+	transition: background-color 0.3s;
+}
 
+.btn-cancel:hover {
+	background-color: #d9363e;
+}
+
+/*css cho modal hủy đơn*/
+.modal-overlay {
+    display: none; /* Ẩn modal mặc định */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Màu nền mờ cho overlay */
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modal-overlay.show {
+    display: flex; /* Hiển thị modal khi có lớp "show" */
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 400px;
+    width: 90%;
+}
+.btn-cancel{
+	margin-top: 2%;
+}
+.table-td-action{
+	width: 15%;
+}
