--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Thanh toán</title>
 <link rel="stylesheet" href="../css/payment.css">
 <link rel="stylesheet" href="../js/payment.js">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
